Fix issue with border-radius on safari

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ h1 {
     align-items: center;
     background-color: transparent;
     border: none;
+    border-radius: 0;
     border-bottom: 2px solid #6c63ff;
     color: rgba(245, 245, 245, 0.9);
     display: flex;
@@ -56,7 +57,7 @@ h1 {
     letter-spacing: 0.1rem;
     max-height: fit-content;
     min-height: 35px;
-    padding: 0.2rem;
+    padding: 0.6rem;
     text-align: center;
 }
 
@@ -69,12 +70,10 @@ h1 {
     flex-direction: row;
     justify-content: space-between;
 }
-
 input {
     outline: none;
     width: 46%;
 }
-
 input:focus {
     border-bottom: 2px solid #f5f5f5;
 }
@@ -82,6 +81,7 @@ input:focus {
 button {
     cursor: pointer;
     height: 46px;
+    -webkit-appearance: none;
     width: 100%;
 }
 button[type="submit"] {
@@ -90,12 +90,11 @@ button[type="submit"] {
     font-size: 0.95rem;
     font-weight: 700;
 }
-
 button[type="reset"] {
     background-color: transparent;
     border: 2px solid #6c63ff;
     color: #6c63ff;
-    font-size: 0.85rem;
+    font-size: 0.9rem;
     font-weight: 500;
 }
 
@@ -112,12 +111,10 @@ button[type="reset"] {
     font-size: 1.12rem;
     justify-content: center;
 }
-
 .icons > a {
     color: #f5f5f5;
     transition: all 100ms ease-in-out;
 }
-
 .icons > a:hover {
     color: #6c63ff;
     transform: scale(1.3);
@@ -137,7 +134,6 @@ footer {
     justify-content: center;
     width: 100%;
 }
-
 footer h4 {
     color: #f5f5f5;
     font-size: 0.7rem;
@@ -145,7 +141,6 @@ footer h4 {
     letter-spacing: 0.08rem;
     text-transform: capitalize;
 }
-
 footer > h4 > .icon-heart {
     color: #6c63ff;
     font-size: 0.75rem;
